fix(message): action buttons missalignement

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -1681,7 +1681,7 @@ pre.msg_source {
 .menu_search.selected_menu { background-color: transparent; }
 #dropdownMenuForward + ul .forward_link span,
 #contact_info + #contact_popup span { white-space: nowrap; }
-#extra-header-buttons { display: inline-block; margin-top: 0.5rem; }
+#extra-header-buttons { display: inline-block; margin-top: 0; }
 
 /* some theming changes */
 .allow_image_link .btn-light, .definitive_actions .btn-light,
